--- a/vignettes/ChromosomePlots.Rmd
+++ b/vignettes/ChromosomePlots.Rmd
@@ -55,11 +55,12 @@ grMidpoint <- function(gr) {
 }
 
 # Make a BSgenome into a GRanges object, one range per chromosome
-genomeToGR <- function(genome) {
+BSgenomeToGR <- function(genome) {
   df <- data.frame(seqnames=seqnames(genome), start=1, end=lengths(genome), strand="*")
   gr <- makeGRangesFromDataFrame(df)
   gr
 }
+(BSgenomeToGR(genomes$Oki))
 
 # Make a genome into a bunch of windows of length N
 genomeGRToWindows <- function(gr, windowSize=10000) {
@@ -77,73 +78,66 @@ genomeGRToWindows <- function(gr, windowSize=10000) {
   gr <- makeGRangesFromDataFrame(chr)
   gr
 }
+(genomeGRToWindows(tmp))
 
 # Generate counts and stats for a column within mcol(GRanges)
 mcolStats <- function(mcol, mcolName=NULL, windowSize=10000) {
-  count <- length(mcol)
-  count_window <- count/windowSize
+  count <- length(na.omit(mcol))
+  count_norm <- count/windowSize
   
+  # Create a new DF and overwrite NA's as needed
+  df <- data.frame('count'=count, 'count_norm'=count_norm, 'mean'=NA, 'median'=NA, 'sd'=NA)
   if(is.numeric(mcol)){
-    mean_num <- mean(mcol)
-    mean_window <- mean(mcol)/windowSize
-    median_window <- median(mcol)
-    sd_window <- sd(mcol)
-  } else {
-    mean_num <- NA
-    mean_window <- mean(mcol)/windowSize
-    median_num <- NA
-    median_
-    median_window = NA
-    sd_window = NA
+    df$mean <- mean(mcol, na.rm=T)
+    df$median <- median(mcol, na.rm=T)
+    df$sd <- sd(mcol, na.rm=T)
   }
-  df[[paste(mcolName, '.count', sep='')]] = count
-  df[[paste(mcolName, '.count_window', sep='')]] = count_window
-  df[[paste(mcolName, '.mean', sep='')]] = mean_window
-  df[[paste(mcolName, '.mean_window', sep='')]] = mean_window
-  df[[paste(mcolName, '.median_window', sep='')]] = median_window
-  df[[paste(mcolName, '.sd_window', sep='')]] = sd_window
-}
-# Intersect each genome window with some other GRange (meta, as in metadata)
-# This requires that meta is in the same coordinate system as the genome
-metaPerWindow <- function(genomeWindows, meta, windowSize=10000, metaCols=NULL) {
-  # For every genomic window...
-  gwl <- lapply(1:nrow(genomeWindows), function(gw){
-    ovl <- subsetByOverlaps(meta, gw) # Intersect genome window's range with metadata
-    # 
-  })
-  #count = 
-  #count_per_window = count / windowSize
-  #count_mean = mean(count)
-  #count_median = median(count)
-  #count_sd = sd(count)
-}
-
-grWindows <- function(genome=NULL, meta=NULL, windowSize=10000, metaCols=NULL){
-  # Make a chromosome-scale GRange from genome
-  genome <- genomeToGR(genome)
-  # Make a windowed GRange from chromosomes
-  genome <- genomeGRToWindows(genome, windowSize=windowSize)
-
-  # Add midpoints to metadata
-  #meta$midpoint <- grMidpoint(meta)
-  # Overlap windowed GRange with some annotation GRange
-  ovl <- findOverlaps(genome, meta)
-  metadata_cols <- mcols(meta)
-  tmp <- metaPerWindow(genome, meta)
-  print(head(tmp))
-  #print(length(list(ovl@from)))
-  #tmp <- aggregate(metadata_cols$dNdS_GUIDANCE2, list(ovl@from), mean)
-  #print(head(tmp))
   
-  #print(head(ovl))
-  #overlaps <- findOverlaps(genome, meta)
-  #averagedSignal <- aggregate(score(sites), list(overlaps@from), mean)
-  #print(head(overl))
+  # Add column name prefix to facilitate cbind later
+  if(!is.null(mcolName)){
+    colnames(df) <- sapply(colnames(df), function(s) paste(mcolName, '.', s, sep='') )
+  }
+  df
 }
-#overlaps <- findOverlaps(signal, intervals)
-#signal <- signal[overlaps@queryHits]
-#averagedSignal <- aggregate(score(sites), list(overlaps@subjectHits), mean)
-tmp <- grWindows(genome=genomes$Oki, meta=transcripts$Oki, windowSize=10000)
+(mcolStats(subsetByOverlaps(transcripts$Oki, tmp2[1:70,])$dNdS_HmmCleaner))
+
+# Wrapper to calculate stats (i.e., mcolStats) on every column in a metadata GRanges
+mcolStatsArray <- function(metaSubset, windowSize=10000, includeMetaCols=NULL) {
+  metaSubset <- as.data.frame(mcols(metaSubset))
+  meta_cols <- colnames(metaSubset)
+  # If metaCols is supplied, then only include metaCols in the array.
+  if(!is.null(includeMetaCols)){
+    meta_cols <- meta_cols[which(meta_cols %in% includeMetaCols)]
+  }
+  # For every remaining metadata column, calculate stats, using the column name to allow cbinding
+  mcolSA <- lapply(meta_cols, function(m) mcolStats(metaSubset[[m]], mcolName=m, windowSize=windowSize))
+  mcolSA <- do.call(cbind, mcolSA)
+  mcolSA
+}
+(mcolStatsArray(subsetByOverlaps(transcripts$Oki, tmp2[1:70,])))
+
+# Intersect each genome window with some other GRange (meta, as in metadata)
+metaPerWindow <- function(genomeWindows, meta, windowSize=10000, includeMetaCols=NULL, threads=1) {
+  # For every genomic window...
+  gwl <- BiocParallel::bplapply(1:length(genomeWindows), function(gw){
+    ovl <- subsetByOverlaps(meta, genomeWindows[gw,]) # Get metadata window aligning with genome window
+    mc <- mcolStatsArray(ovl, windowSize=windowSize, includeMetaCols=includeMetaCols) # For every metadata window, calculate stats
+    annot <- ovl # Create annotated GRanges
+    #annot <- lapply(colnames(mc), function(col) annot[[col]] <- mc[[col]])
+    annot
+  })
+  gwl
+}
+metaPerWindow(tmp2, transcripts$Oki[1:100,], windowSize=10000, includeMetaCols=NULL, threads=4)
+
+
+# Function to do everything
+grWindows <- function(genome=NULL, meta=NULL, windowSize=10000, includeMetaCols=NULL, threads=1){
+  genome <- BSgenomeToGR(genome)                             # Make GRanges from genome
+  genome <- genomeGRToWindows(genome, windowSize=windowSize) # Make a windowed GRange from chromosome GRanges
+  mpw <- metaPerWindow(genome, meta, windowSize=windowSize, includeMetaCols=includeMetaCols, threads=threads) # if 
+}
+tmp <- grWindows(genome=genomes$Oki, meta=transcripts$Oki, windowSize=10000, threads=4)
 ```
 
 
