Add a couple PWMs for the lab meeting.

--- a/vignettes/PWM.Rmd
+++ b/vignettes/PWM.Rmd
@@ -212,8 +212,15 @@ plotOneMotif(gadems$unmap$Bar_Osa[[1]], "Barcelona - Okinawa")
 
 ## Inversion left gaps
 
-(to be written)
 
+Here are a few graphical examples.
+
+```{r plot_some_alnNonCoa_motifs}
+plotOneMotif(gadems$inv.lgaps$Oki_Osa[[1]], "Okinawa - Osaka")
+plotOneMotif(gadems$unmap$Oki_Kum[[1]], "Okinawa - Kume")
+plotOneMotif(gadems$unmap$Osa_Oki[[1]], "Osaka - Okinawa")
+plotOneMotif(gadems$unmap$Bar_Osa[[1]], "Barcelona - Okinawa")
+```
 ### AT richness
 
 ```{r at_richness}
