--- a/vignettes/PWM.Rmd
+++ b/vignettes/PWM.Rmd
@@ -424,8 +424,7 @@ with its PWM.
 # No exact match
 vmatchPattern("rAAGCsGCwwmkCGrCTTyn", OKI2018_I69)
 
-pwm <- rGADEM::getPWM(gadems.invLeftGap$Oki_Osa[[1]])
-gadems.invLeftGap$Oki_Osa[[1]]@consensus
+pwm <- rGADEM::getPWM(gadems$inv.lgaps$Oki_Osa[[1]])
 
 pwmHits <- sapply(genomes, matchPWM, pwm = pwm)
 sapply(pwmHits, length)
