--- a/vignettes/PWM.Rmd
+++ b/vignettes/PWM.Rmd
@@ -137,7 +137,7 @@ inv_seqs <- sapply(coa[1:15], leftInversionGaps) |> sapply(getGRseqs) |> SimpleL
 sapply(inv_seqs, length)
 if (!file.exists("gadems.invs.Rds")) {
   gadems$invs <- BiocParallel::bplapply(inv_seqs, doGadem) |> SimpleList()
-  saveRDS(gadems$inv.lgaps, file = "gadems.invs.Rds")
+  saveRDS(gadems$inv, file = "gadems.invs.Rds")
 } else {
   gadems$invs <- readRDS("gadems.invs.Rds")
 }
@@ -150,8 +150,8 @@ prom_seqs <- sapply(annots[1:3], \(gb) suppressWarnings(trim(promoters(gb)))) |>
   sapply(getGRseqs) |> SimpleList()
 sapply(prom_seqs, length)
 if (!file.exists("gadems.proms.Rds")) {
-  gadems$invs <- BiocParallel::bplapply(prom_seqs, doGadem) |> SimpleList()
-  saveRDS(gadems$inv.lgaps, file = "gadems.proms.Rds")
+  gadems$proms <- BiocParallel::bplapply(prom_seqs, doGadem) |> SimpleList()
+  saveRDS(gadems$proms, file = "gadems.proms.Rds")
 } else {
   gadems$proms <- readRDS("gadems.proms.Rds")
 }
@@ -165,7 +165,7 @@ intron_seqs <- sapply(annots[1:3], GenomicFeatures::intronicParts) |>
 sapply(intron_seqs, length)
 if (!file.exists("gadems.introns.Rds")) {
   gadems$introns <- BiocParallel::bplapply(intron_seqs, doGadem) |> SimpleList()
-  saveRDS(gadems$inv.lgaps, file = "gadems.introns.Rds")
+  saveRDS(gadems$introns, file = "gadems.introns.Rds")
 } else {
   gadems$introns <- readRDS("gadems.introns.Rds")
 }
